--- a/sms.html
+++ b/sms.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tornado - Home</title>
@@ -21,7 +23,7 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
-                        
+
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
@@ -160,6 +162,28 @@
                 <div class="sms-container  bg-primary d-flex flex-column">
                     <div class="sms-header me-auto ms-auto">
                         <h2 class="title">Sms/Email göndər</h2>
+                        <div class="sms-header-dropdown-group">
+                            <div class="sms-header-dropdown-1 bootstrap-select">
+                                <select id="select-box" class="selectpicker" data-live-search="false" multiple
+                                    title="SMS" data-selected-text-format="static">
+                                    <option>User 1</option>
+                                    <option>User 2</option>
+                                    <option>User 3</option>
+                                    <option>User 4</option>
+                                    <option>User 5</option>
+                                </select>
+                            </div>
+                            <div class="sms-header-dropdown-2 bootstrap-select">
+                                <select id="select-box" class="selectpicker" data-live-search="false" multiple
+                                    title="Müştəri kriteryaları" data-selected-text-format="static">
+                                    <option>User 1</option>
+                                    <option>User 2</option>
+                                    <option>User 3</option>
+                                    <option>User 4</option>
+                                    <option>User 5</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                     <div class="sms-container-inner me-auto ms-auto">
                         <form>
@@ -200,7 +224,9 @@
     </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
